style.css
body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    
    padding: 10px 20%; 

    text-align: center;
    background-color: beige;
}

.selection-img {
    display: flex;
    align-self: center;
    width: 100%;
    max-width: 800px;
    
    gap: 10px;
}

.selection-img > div {
    flex: 1 1 0px;
    font-size: larger;
    border: 1px solid black;
    
    display: flex;
    flex-direction: column;
    justify-content: space-between;
   
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
}
.modal{
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }

/* Modal Content */
.modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
  }
  
/* The Close Button */
.close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  
  .close:hover,
  .close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
  }

